SONAR-15741 - Centralized check for child projects permission